--- a/global.css
+++ b/global.css
@@ -1,14 +1,14 @@
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
-#converted  { color: red; font-weight: bold; font-size:large;          }     /* Calculated values in bold */
+#converted  { color: yellow; font-weight: bold; font-size:large;          }     /* Calculated values in bold */
 input       { 
               text-align: left;       /* Align input to the left  */
-              border: none; 
-              border-radius: 20px 20px 20px 20px;
-              padding: 5px  5px;
+              border: solid ; 
+              border-radius: 100px 100px 100px 100px;
+              padding: 15px 15px;
               font-size:large;       }
 body
 {
- background-color:#b0c4de;  /* blue */
+ background-color:green;  /* blue */
  font-size:large;
  font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
 }
